# Modeling-Rhythm-Structure

./: README.md  create_grammar.ipynb  grammar_learning.ipynb  result_analysis.ipynb
qparselib/: CHANGELOG.md  CMakeLists.txt  Doxyfile  Gemfile  INSTALL.txt  Makefile  README.md  params.ini  quant
qparselib/docs/: README.md  _config.yml
qparselib/docs/doc/: api-general.md  api-input.md  api-output.md  api-schemata.md  api-segment.md  api-table.md  api-weight.md  modules.md  pandoc.md  qparse-general.md  qparse-input.md  qparse-output.md  qparse-schemata.md  qparse-segment.md  qparse-table.md  qparse-weight.md  refman.md
qparselib/docs/doc/html/: annotated.html  classANode-members.html  classANode.html  classAONode-members.html  classAONode.html  classAlignedInterval-members.html  classAlignedInterval.html  classAtable-members.html  classAtable.html  classBrecord-members.html  classBrecord.html  classComboState-members.html  classComboState.html  classComboWTA-members.html  classComboWTA.html  classCountingWTA-members.html  classCountingWTA.html  classCountingWeight-members.html  classCountingWeight.html  classDepthMarking-members.html  classDepthMarking.html  classDistance-members.html  classDistance.html  classDurationList-members.html  classDurationList.html  classDurationTree-members.html  classDurationTree.html  classEnvironment-members.html  classEnvironment.html  classEventLabel-members.html  classEventLabel.html  classFloatWeight-members.html  classFloatWeight.html  (+272 more)
qparselib/include/spdlog/: tweakme.h
qparselib/lib/midifile/: Binasc.cpp  Binasc.h  CMakeLists.txt  MidiEvent.h  MidiEventList.cpp  MidiEventList.h  MidiFile.cpp  MidiFile.h  MidiMessage.h  Options.h  README.txt
qparselib/src/: CMakeLists.txt  README.md
qparselib/src/general/: CMakeLists.txt  Makefile.txt  QPconfig.h  README.md  Rational.cpp  Rational.hpp  constant.cpp  constant.h  init.cpp  init.hpp  trace.cpp  trace.hpp
qparselib/src/input/: CMakeLists.txt  InputSegmentMIDI.cpp  InputSegmentMIDI.hpp  InputSegmentSerial.cpp  InputSegmentSerial.hpp  README.md  Schema.cpp  WTAFile.cpp  WTAFile.hpp
qparselib/src/output/: APTED.cpp  CMakeLists.txt  DurationList.cpp  DurationList.hpp  DurationTree.cpp  DurationTree.hpp  Label.cpp  Label.hpp  LilyPond.cpp  MEI.cpp  MEI.hpp  OMRT.cpp  OMRT.hpp  Onsets.cpp  Onsets.hpp  PointedRT.cpp  PointedRT.hpp  QDate.cpp  QDate.hpp  README.md  RT.cpp  RT.hpp  SerialLabel.cpp  SerialLabel.hpp  ValueList.cpp  ValueList.hpp
qparselib/src/parsers/: CMakeLists.txt  Parser.hpp  Parser.tpp  Parser1bar1bestSIP.cpp  Parser1bar1bestSIP.hpp  Parser1barKbestSKIP.cpp  Parser1barKbestSKIP.hpp  ParserInputless1best.cpp  ParserInputless1best.hpp  ParserInputlessKbest.cpp  ParserInputlessKbest.hpp  ParserMultibar1bestSIPBU.cpp  ParserMultibar1bestSIPBU.hpp  ParserMultibar1bestSIPflat.cpp  ParserMultibar1bestSIPflat.hpp  README.md
qparselib/src/schemata/: CMakeLists.txt  ComboWTA.cpp  ComboWTA.hpp  CountingWTA.cpp  CountingWTA.hpp  PreWTA.cpp  PreWTA.hpp  README.md  State.cpp  State.hpp  SubdivisionSchema.cpp  SubdivisionSchema.hpp  Transition.cpp  Transition.hpp  ValueWTA.cpp  ValueWTA.hpp  WTA.cpp  WTA.hpp
qparselib/src/scoremodel/: Beam.cpp  Beam.hpp  CMakeLists.txt  Duration.cpp  Duration.hpp  Event.cpp  Event.hpp  Measure.cpp  Measure.hpp  Note.cpp  Note.hpp  Part.cpp  Part.hpp  README.md  Rest.cpp  Rest.hpp  Score.cpp  Score.hpp  ScoreMeter.cpp  ScoreMeter.hpp  Sequence.cpp  Sequence.hpp  SpanningElement.cpp  SpanningElement.hpp  Tuplet.cpp  Tuplet.hpp  Voice.cpp  Voice.hpp
qparselib/src/segment/: AlignedInterval.cpp  AlignedInterval.hpp  CMakeLists.txt  Environment.cpp  Environment.hpp  InputSegment.cpp  InputSegment.hpp  InputSegmentMono.cpp  InputSegmentMono.hpp  InputSegmentNogap.cpp  InputSegmentNogap.hpp  Interval.cpp  Interval.hpp  IntervalHeap.cpp  IntervalHeap.hpp  IntervalTree.cpp  IntervalTree.hpp  MusEvent.cpp  MusEvent.hpp  MusPoint.cpp  MusPoint.hpp  Pitch.cpp  Pitch.hpp  Point.cpp  Point.hpp  README.md  Spiral.cpp  Spiral.hpp
qparselib/src/table/: Atable.hpp  Atable.tpp  Brecord.hpp  Brecord.tpp  CMakeLists.txt  Krecord.hpp  Krecord.tpp  Pointer.tpp  Ptr.cpp  Ptr.hpp  PtrS.cpp  PtrS.hpp  PtrSI.cpp  PtrSI.hpp  PtrSIP.cpp  PtrSIP.hpp  PtrSK.cpp  PtrSK.hpp  PtrSKIP.cpp  PtrSKIP.hpp  README.md  Record.hpp  Record.tpp  Rune.hpp  Rune.tpp  Table.hpp  Table.tpp
qparselib/src/targets/: README.md  test.cpp
qparselib/src/weight/: CMakeLists.txt  CountingWeight.cpp  CountingWeight.hpp  Distance.cpp  Distance.hpp  FloatWeight.cpp  FloatWeight.hpp  PerformanceModel.cpp  PerformanceModel.hpp  README.md  SemiRing.hpp  TropicalWeight.cpp  TropicalWeight.hpp  ViterbiWeight.cpp  ViterbiWeight.hpp  Weight.cpp  Weight.hpp
qparselib/test/: equiv  midifiletest.cpp  miditest.cpp  run_quant.sh  tests_mei.sh  trace.txt
qparselib/test/draft/: main.cpp  mididump.cpp  test_pqueue.cpp
qparselib/test/input/: ama-bar3.txt  ama.txt  input-01.txt  input-02.txt  input-03.txt  input-04.txt  input-05.txt  input-06.txt  input-14Desain.txt  input-15.txt  input-19.txt  input-34.txt  input-mvbd.txt  simple.txt  simple1.txt
qparselib/test/key_onset/: key_onset.py  key_onset_offset.py  out.txt  readme.txt
qparselib/test/lily/: 02-05.ly
qparselib/test/mei/: 103.mei  304-Bach-polonaise-DA.mei  Makefile  createmei  createmei.cpp  me.mei  mymei.mei  readmei
qparselib/test/midi_files/: fra1.mid  fra2.mid
qparselib/test/midi_in/: 311-Alto.mid  311-Alto.xml  311-Alto02.mid  311-Alto02.xml  343-sto.mid  ama.mid  excom1.mid  simple.mid  trace1.mid
qparselib/test/midi_out/: 103.mid  304-03-304.mid  304-03.mid
qparselib/test/rv/: rv-01-schema-02.ly  rv-02-schema-02.ly  rv-05.txt  temp_tim1.txt  temp_tim3.txt
qparselib/test/schema/: generated_grammar1.txt  generated_grammar2.txt  generated_grammar4.txt  schema-00.txt  schema-01.txt  schema-02.txt  schema-03-00.txt  schema-03-103.txt  schema-03-304.txt  schema-03.txt  schema-04.txt  schema-05.txt  schema-08.txt  schema-10.txt  schema-ama.txt  unweighted_long_grammar-mine.txt  unweighted_long_grammar.txt  weighted_grammar_44.txt
(+687 files in other folders)
