
cmake_minimum_required (VERSION 3.1)

message(STATUS "compile framework for ${CONFIG_FILE}")




LOCALIZE(targets/quant)



set(src_quant
  ${HERE}/test_rearchi.cpp
)


set(include_quant
)


set(src_targets/quant
  ${src_quant}
  ${src_input}
  ${src_weight}
  ${quant_src_schemata}
  ${src_kbest}
  ${common_src_output}
)

set(include_targets/quant
  ${include_quant}
  ${include_input}
  ${include_weight}
  ${include__schemata}
  ${include_kbest}
  ${include_output}
)


set(QUANT_NAME quant)

add_library(${QUANT_NAME}
  STATIC
  ${src_targets/quant}
  ${include_targets/quant}
)


# to build a framework
#set_target_properties(${QUANT_NAME} PROPERTIES FRAMEWORK TRUE)
#set_target_properties(${target} PROPERTIES FRAMEWORK_VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
       
set_target_properties(${QUANT_NAME} PROPERTIES LINKER_LANGUAGE CXX)

#to suppress cmake warnings on rpath
set_target_properties(${QUANT_NAME} PROPERTIES MACOSX_RPATH TRUE) 



# ----------------------------------------------
# Flags

target_compile_definitions(${QPARSE_NAME}
  PUBLIC -DQPARSE_TARGET=TARGET_QUANT
)



# ----------------------------------------------------------
# Sndfile


if(IOS_PLATFORM)

	# no special include dir or taget lib dir for the framework... yet

else()

	find_package(Sndfile REQUIRED)
	target_include_directories( ${ANTESCOFO_FRAMEWORK_NAME}
		PUBLIC ${SNDFILE_INCLUDE_DIR}
	)
	target_link_libraries(${ANTESCOFO_FRAMEWORK_NAME}
		${SNDFILE_LIBRARIES}
	)
endif()


# ----------------------------------------------------------
# Production de la lib

set(LIB_DESTINATION "${BUILD}/../../antescofocoreioslibs/LibAntescofoFramework-FAT")

install(TARGETS ${ANTESCOFO_FRAMEWORK_NAME}
    CONFIGURATIONS Debug
    ARCHIVE DESTINATION "${LIB_DESTINATION}/Debug"
    LIBRARY DESTINATION "${LIB_DESTINATION}/Debug"
    RUNTIME DESTINATION "${LIB_DESTINATION}/Debug"
)

install(TARGETS ${ANTESCOFO_FRAMEWORK_NAME}
    CONFIGURATIONS Release
    ARCHIVE DESTINATION "${LIB_DESTINATION}/Release"
    LIBRARY DESTINATION "${LIB_DESTINATION}/Release"
    RUNTIME DESTINATION "${LIB_DESTINATION}/Release"
)

install(FILES ${include_Targets/AntescofoFramework} ${BUILD}/Generated/gitDataAutoGenerated.h
    DESTINATION "${LIB_DESTINATION}/include/"
)

# ---------------------------------------------------------------
# Dependance à Git

set_source_files_properties(${HERE}/framework.cpp
  PROPERTIES OBJECT_DEPENDS ${GENERATED}/gitDataAutoGenerated.h)


